[metadata]
name = mpl-font
description = Font selector for matplotlib
author = Gerhard Tan
author_email = gerhard.gh.ta@gmail.com
home-page = https://github.com/koho/mpl-font
long-description = file: README.md
long_description_content_type = text/markdown
platform = any

[options]
setup_requires = setuptools_scm
install_requires = matplotlib
